SDKs/twilio.com/twilio_studio_v2/1.43.0/php/README.md
# openapi/openapi

<!-- Start SDK Installation -->
## SDK Installation

### Composer

To install the SDK first add the below to your `composer.json` file:

```json
{
    "repositories": [
        {
            "type": "github",
            "url": "<UNSET>.git"
        }
    ],
    "require": {
        "openapi/openapi": "*"
    }
}
```

Then run the following command:

```bash
composer update
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```php
<?php

declare(strict_types=1);
require_once 'vendor/autoload.php';

use \OpenAPI\OpenAPI\SDK;
use \OpenAPI\OpenAPI\Models\Operations\CreateExecutionRequest;
use \OpenAPI\OpenAPI\Models\Operations\CreateExecutionCreateExecutionRequest;
use \OpenAPI\OpenAPI\Models\Operations\CreateExecutionSecurity;

$sdk = SDK::builder()
    ->build();

try {
    $request = new CreateExecutionRequest();
    $request->flowSid = 'corrupti';
    $request->requestBody = new CreateExecutionCreateExecutionRequest();
    $request->requestBody->from = 'provident';
    $request->requestBody->parameters = 'distinctio';
    $request->requestBody->to = 'quibusdam';

    $requestSecurity = new CreateExecutionSecurity();
    $requestSecurity->password = 'YOUR_PASSWORD_HERE';
    $requestSecurity->username = 'YOUR_USERNAME_HERE';

    $response = $sdk->createExecution($request, $requestSecurity);

    if ($response->studioV2FlowExecution !== null) {
        // handle response
    }
} catch (Exception $e) {
    // handle exception
}
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## Available Resources and Operations

### [SDK](docs/sdk/README.md)

* [createExecution](docs/sdk/README.md#createexecution) - Triggers a new Execution for the Flow
* [createFlow](docs/sdk/README.md#createflow) - Create a Flow.
* [deleteExecution](docs/sdk/README.md#deleteexecution) - Delete the Execution and all Steps relating to it.
* [deleteFlow](docs/sdk/README.md#deleteflow) - Delete a specific Flow.
* [fetchExecution](docs/sdk/README.md#fetchexecution) - Retrieve an Execution
* [fetchExecutionContext](docs/sdk/README.md#fetchexecutioncontext) - Retrieve the most recent context for an Execution.
* [fetchExecutionStep](docs/sdk/README.md#fetchexecutionstep) - Retrieve a Step.
* [fetchExecutionStepContext](docs/sdk/README.md#fetchexecutionstepcontext) - Retrieve the context for an Execution Step.
* [fetchFlow](docs/sdk/README.md#fetchflow) - Retrieve a specific Flow.
* [fetchFlowRevision](docs/sdk/README.md#fetchflowrevision) - Retrieve a specific Flow revision.
* [fetchTestUser](docs/sdk/README.md#fetchtestuser) - Fetch flow test users
* [listExecution](docs/sdk/README.md#listexecution) - Retrieve a list of all Executions for the Flow.
* [listExecutionStep](docs/sdk/README.md#listexecutionstep) - Retrieve a list of all Steps for an Execution.
* [listFlow](docs/sdk/README.md#listflow) - Retrieve a list of all Flows.
* [listFlowRevision](docs/sdk/README.md#listflowrevision) - Retrieve a list of all Flows revisions.
* [updateExecution](docs/sdk/README.md#updateexecution) - Update the status of an Execution to `ended`.
* [updateFlow](docs/sdk/README.md#updateflow) - Update a Flow.
* [updateFlowValidate](docs/sdk/README.md#updateflowvalidate) - Validate flow JSON definition
* [updateTestUser](docs/sdk/README.md#updatetestuser) - Update flow test users
<!-- End SDK Available Operations -->

### Maturity

This SDK is in beta, and there may be breaking changes between versions without a major version update. Therefore, we recommend pinning usage
to a specific package version. This way, you can install the same version each time without breaking changes unless you are intentionally
looking for the latest version.

### Contributions

While we value open-source contributions to this SDK, this library is generated programmatically.
Feel free to open a PR or a Github issue as a proof of concept and we'll do our best to include it in a future release !

### SDK Created by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
